# EmberChamber

./: .env.example  .gitattributes  .gitignore  .prettierignore  .vercelignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.service  README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml  repo-map.yaml  vercel.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: beta_contract_gap.yml  bug_report.yml  config.yml  feature_request.yml  ux_issue.yml
.github/actions/build-protocol/: action.yml
.github/actions/configure-bot-git/: action.yml
.github/actions/install-tauri-linux-deps/: action.yml
.github/workflows/: build-android.yml  ci-docker.yml  ci-mobile-self-hosted.yml  ci-mobile.yml  ci-repo-contract.yml  ci-rust-self-hosted.yml  ci-rust.yml  ci-web-self-hosted.yml  ci-web.yml  deploy-play-store.yml  deploy-relay.yml  deploy-web.yml  deploy-wiki.yml  prune-workflow-runs.yml  publish-screenshots.yml  release-android.yml  release-apple.yml  release-linux.yml  release-macos.yml  release-windows.yml  reusable-ci-mobile.yml  reusable-ci-rust.yml  reusable-ci-web.yml  reusable-release-desktop.yml
.kilo/: kilo.json  package.json
.playwright-cli/: page-2026-04-03T20-09-36-864Z.yml
apps/api/: .env.example  .eslintrc.cjs  AGENTS.md  Dockerfile  LEGACY.md  eslint.config.mjs  jest.config.json  package.json  tsconfig.json
apps/desktop/: AGENTS.md  README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  secure_state.rs
apps/mobile/: AGENTS.md  App.tsx  README.md  app.config.js  app.json  index.js  jest.config.js  package.json
apps/relay/: .dev.vars.example  AGENTS.md  package.json  tsconfig.json  wrangler.jsonc
apps/web/: .env.example  .eslintrc.cjs  AGENTS.md  Dockerfile  README.md  eslint.config.mjs  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/domain/: Cargo.toml
crates/relay-protocol/: Cargo.toml  README.md
crates/relay-protocol/src/: auth.rs  conversation.rs  device_link.rs  envelope.rs  lib.rs  mailbox.rs  moderation.rs
crates/relay-protocol/tests/: protocol_parity.rs
crates/test-support/: Cargo.toml
docs/: README.md  android-fcm-setup.md  android-play-store-release.md  android-polish-roadmap.md  architecture.md  ci-screenshots.md  github-self-hosted-runner.md  launch-targets.md  operator-playbook.md  release-checklist.md  roadmap.md  ubuntu-install-and-test.md  web-polish-roadmap.md
docs/api/: openapi.yaml  relay-http.md
docs/architecture/: overview.md
docs/plansforwork/: 2026-04-02-roadmap-phase0-phase1-implementation-plan.md  2026-04-02-roadmap-phase2-implementation-plan.md  2026-04-02-ubuntu-copy-polish-plan.md  2026-04-04-mobile-improvements-plan.md  2026-04-04-mobile-improvements-plan.updated-2026-04-09.md  2026-04-04-ui-surface-punch-list.md  2026-04-05-encrypted-backup-export-plan.md  2026-04-05-self-serve-invite-plan.md  EmberChamber-AI-Council-README.md  Market research.md  consolidated-backlog.md  phase2-completion-plan.md  relay-hardening-and-relay-first-migration.md  telegram-signal-level-polish-plan.md
docs/product/: market-research.md  personas.md  ui-patterns.md
docs/security/: threat-model.md
docs/seo/: brand-collisions.md  search-visibility-audit.md
docs/wiki-site/: README.md  architecture.md  build.js  contributing.md  desktop.md  getting-started.md  index.md  mobile.md  operator-playbook.md  package.json  platform-status.md  pnpm-lock.yaml  privacy-security.md  relay.md  roadmap.md  screenshots.md  web.md
infra/: LEGACY.md  docker-compose.yml
infra/compose/: docker-compose.yml
llm_council/: COUNCIL-CHARTER.md  COUNCIL-OPERATING-MODEL.md  EVIDENCE-PACK-SPEC.md  PERSONA-ZIP-INDEX.md  README.md  ROUTING-MATRIX.md  TOKEN-REDUCTION-STRATEGY.md
llm_council/personas/: C-00-Moderator-and-Synthesis-Director.md  C-01-Product-and-Scope-Reviewer.md  C-02-UX-and-Onboarding-Reviewer.md  C-03-Web-Client-Reviewer.md  C-04-Mobile-Client-Reviewer.md  C-05-Desktop-Shell-Reviewer.md  C-06-Relay-Runtime-Reviewer.md  C-07-Protocol-Contracts-Reviewer.md  C-08-Rust-Core-Reviewer.md  C-09-Security-Privacy-Crypto-Reviewer.md  C-10-Trust-Abuse-and-Safety-Reviewer.md  C-11-QA-Release-and-Reliability-Reviewer.md  C-12-AI-Coder-DX-and-Repo-Steward.md  C-13-Data-Collection-and-Evidence-Packager.md
llm_council/scripts/: build_evidence_pack.py  collect_changed_files.sh  collect_ci_signals.sh  collect_repo_facts.sh  orchestrate_review.sh  rebuild_persona_zips.sh  route_reviewers.py  run_council_litellm.ps1
llm_council/shared/: 00-council-charter.md  01-grounding-rules.md  02-output-format.md  03-token-budget-rules.md  04-repo-grounding.md  05-review-rubric.md  06-severity-taxonomy.md  07-review-workflow.md  08-frontmatter-schema.md
llm_council/templates/: evidence-pack-template.md  moderator-synthesis-template.md  report-template.md  review-request.template.yaml
scripts/: bootstrap-dev.sh  check-repo-contracts.mjs  create-local-test-invite.sh  generate-screenshot-gallery.mjs  install-git-hooks.sh  install-ubuntu-desktop.sh  setup-github-runner.sh  start-local-relay.sh  ubuntu-ready.sh
scripts/ci/: patch-expo-ios-xcode16.py  patch-podfile-xcode16.py
scripts/git-hooks/: pre-commit
services/: AGENTS.md  LEGACY.md  README.md
services/control-api/: Cargo.toml
services/control-api/src/: main.rs
services/directory-ca/: Cargo.toml
services/directory-ca/src/: main.rs
services/media-worker/: Cargo.toml
services/media-worker/src/: main.rs
services/push-worker/: Cargo.toml
services/push-worker/src/: main.rs
services/realtime-gateway/: Cargo.toml
services/realtime-gateway/src/: main.rs
services/relay-gateway/: Cargo.toml
services/relay-gateway/src/: main.rs
tools/manim/: README.md  emberchamber_app_overview.py  emberchamber_e2ee.py
(+335 files in other folders)
