[workspace]
resolver = "2"
exclude = [
    "services/*",
]
members = [
    # Desktop / mobile shell
    "apps/desktop/src-tauri",
    # Cross-platform secure client core
    "crates/core",
    # Shared crates
    "crates/auth",
    "crates/db",
    "crates/domain",
    "crates/relay-protocol",
    "crates/test-support",
]

[workspace.package]
version = "0.1.0-beta.25"
edition = "2021"
license = "MIT"
repository = "https://github.com/jhwodchuck/EmberChamber"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dotenvy = "0.15"
# Crypto
ring = "0.17"
base64 = "0.22"
# Tauri desktop / mobile shell
tauri = { version = "2", features = ["protocol-asset"] }
tauri-build = { version = "2", features = [] }
# Workspace crates
emberchamber-core = { path = "crates/core" }
emberchamber-domain = { path = "crates/domain" }
emberchamber-db = { path = "crates/db" }
emberchamber-auth = { path = "crates/auth" }
emberchamber-relay-protocol = { path = "crates/relay-protocol" }
emberchamber-test-support = { path = "crates/test-support" }
