[package]
name = "emberchamber-auth"
description = "Authentication primitives: passkeys, magic links, TOTP, session tokens"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
emberchamber-domain = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
