[package]
name = "emberchamber-relay-protocol"
description = "Relay envelope types, signing, and federation protocol definitions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
emberchamber-domain = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
