[package]
name = "control-api"
description = "REST API for auth, profile, and admin operations"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "control-api"
path = "src/main.rs"

[dependencies]
emberchamber-domain = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
