[package]
name = "control-api"
description = "REST API for auth, profile, and admin operations"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "control-api"
path = "src/main.rs"

[workspace]

[dependencies]
emberchamber-domain = { path = "../../crates/domain" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dotenvy = "0.15"
