[package]
name = "directory-ca"
description = "Global username registry and operator certificate authority"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "directory-ca"
path = "src/main.rs"

[dependencies]
emberchamber-domain = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
