[package]
name = "media-worker"
description = "Upload finalization, MIME/size validation, and malware scanning for hosted spaces"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "media-worker"
path = "src/main.rs"

[dependencies]
emberchamber-domain = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
