[package]
name = "media-worker"
description = "Upload finalization, MIME/size validation, and malware scanning for hosted spaces"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "media-worker"
path = "src/main.rs"

[workspace]

[dependencies]
emberchamber-domain = { path = "../../crates/domain" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dotenvy = "0.15"
