[package]
name = "push-worker"
description = "Web push notification delivery worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "push-worker"
path = "src/main.rs"

[dependencies]
emberchamber-domain = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
