[package]
name = "realtime-gateway"
description = "WebSocket gateway for real-time message fan-out"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "realtime-gateway"
path = "src/main.rs"

[dependencies]
emberchamber-domain = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
