[package]
name = "relay-gateway"
description = "Inter-operator federation relay endpoint"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "relay-gateway"
path = "src/main.rs"

[dependencies]
emberchamber-domain = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
