[package]
name = "emberchamber-desktop"
description = "EmberChamber Tauri shell for Windows, Linux, macOS, Android, and iPhone packaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "emberchamber_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "emberchamber-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
tauri = { version = "2.10.3" }
emberchamber-core = { workspace = true }
