[package]
name = "emberchamber-desktop"
description = "EmberChamber Tauri shell for Windows, Linux, and macOS packaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "emberchamber_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "emberchamber-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { version = "2.10.3", features = [] }
emberchamber-core = { workspace = true }
