[package]
name = "emberchamber-desktop"
description = "EmberChamber Tauri shell for Windows, Linux, and macOS packaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "emberchamber_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "emberchamber-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-updater = "2"
emberchamber-core = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
url = "2"
webbrowser = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.2", default-features = false, features = ["async-secret-service", "crypto-rust", "tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.2", default-features = false, features = ["windows-native"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = { version = "3.6.2", default-features = false, features = ["apple-native"] }
